<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="byedpi_docs">https://github.com/hufrea/byedpi/blob/v0.13/README.md</string>
    <string name="app_name">Ласточка</string>
    <string name="vpn_connect">Подключить</string>
    <string name="vpn_disconnect">Отключить</string>
    <string name="vpn_connected">Подключено</string>
    <string name="vpn_disconnected">Отключено</string>
    <string name="proxy_up">Прокси работает</string>
    <string name="proxy_down">Прокси выключен</string>
    <string name="proxy_start">Старт</string>
    <string name="proxy_stop">Стоп</string>
    <string name="settings">Настройки</string>
    <string name="vpn_permission_denied">Нет разрешения VPN</string>
    <string name="settings_unavailable">Сначала выключите обход, потом меняйте настройки</string>
    <string name="title_settings">Настройки</string>
    <string name="save_logs">Сохранить логи</string>
    <string name="reset_settings">Сбросить</string>
    <string name="logs_failed">Не удалось собрать логи</string>
    <string name="proxy_address">%1$s:%2$s</string>
    <string name="theme_settings">Тема экрана настроек</string>
    <string name="mode_setting">Режим</string>
    <string name="dbs_ip_setting">DNS (системный)</string>
    <string name="bye_dpi_proxy_ip_setting">Адрес прослушивания</string>
    <string name="byedpi_proxy_port_setting">Порт</string>
    <string name="byedpi_max_connections_setting">Макс. соединений</string>
    <string name="byedpi_buffer_size_setting">Размер буфера</string>
    <string name="byedpi_default_ttl_setting">TTL по умолчанию</string>
    <string name="byedpi_no_domain_setting">Без домена</string>
    <string name="byedpi_desync_method_setting">Метод desync</string>
    <string name="byedpi_split_position_setting">Позиция split</string>
    <string name="byedpi_split_at_host_setting">Split по Host</string>
    <string name="byedpi_fake_ttl_setting">TTL фейковых пакетов</string>
    <string name="byedpi_host_mixed_case_setting">Mixed case Host</string>
    <string name="byedpi_domain_mixed_case_setting">Mixed case Domain</string>
    <string name="byedpi_host_remove_spaces_setting">Убрать пробелы Host</string>
    <string name="byedpi_tlsrec_enabled_setting">Разрез TLS record</string>
    <string name="byedpi_tlsrec_position_setting">Позиция TLS record</string>
    <string name="byedpi_tlsrec_at_sni_setting">Разрез TLS по SNI</string>
    <string name="version">Версия</string>
    <string name="source_code_link">Лицензии и исходники</string>
    <string name="credits_link">О программе</string>
    <string name="credits_summary">Что внутри Ласточки и откуда код</string>
    <string name="byedpi_readme_link">Что значат эти параметры?</string>
    <string name="failed_to_start">Не удалось запустить %1$s</string>
    <string name="vpn_channel_name">VPN</string>
    <string name="proxy_channel_name">Прокси</string>
    <string name="notification_title">Ласточка</string>
    <string name="vpn_notification_content">Обход работает</string>
    <string name="vpn_notification_paused">На паузе</string>
    <string name="proxy_notification_content">Прокси работает</string>
    <string name="proxy_notification_paused">Прокси на паузе</string>
    <string name="notification_pause">Пауза</string>
    <string name="notification_resume">Продолжить</string>
    <string name="notification_stop">Стоп</string>
    <string name="general_category">Основные</string>
    <string name="byedpi_category">ByeDPI</string>
    <string name="expert_category">Для экспертов</string>
    <string name="about_category">О программе</string>
    <string name="command_line_editor">Редактор командной строки</string>
    <string name="ui_editor">Редактор галочками</string>
    <string name="use_command_line_settings">Аргументы командной строки</string>
    <string name="desync_http">Desync HTTP</string>
    <string name="desync_https">Desync HTTPS</string>
    <string name="desync_udp">Desync UDP</string>
    <string name="oob_data">OOB Data</string>
    <string name="sni_of_fake_packet">SNI фейкового пакета</string>
    <string name="byedpi_proxy">Прокси</string>
    <string name="byedpi_desync">Desync</string>
    <string name="command_line_arguments">Аргументы</string>
    <string name="byedpi_hosts_mode_setting">Хосты</string>
    <string name="byedpi_hosts_blacklist_setting">Чёрный список хостов</string>
    <string name="byedpi_hosts_whitelist_setting">Белый список хостов</string>
    <string name="byedpi_tcp_fast_open_setting">TCP Fast Open</string>
    <string name="byedpi_udp_fake_count">Число UDP fake</string>
    <string name="ipv6_setting">IPv6</string>
    <string name="byedpi_fake_offset_setting">Смещение fake</string>
    <string name="byedpi_drop_sack_setting">Drop SACK</string>
    <string name="desync_udp_category">UDP</string>
    <string name="desync_http_category">HTTP</string>
    <string name="desync_https_category">HTTPS</string>
    <string name="byedpi_protocols_category">Протоколы</string>
    <string name="byedpi_protocols_hint">Снимите все галочки, чтобы desync шёл на весь трафик</string>
    <string name="dns_summary_hint">Обычно не трогайте: в VPN используется свой DNS-туннель</string>
    <string name="expert_warning">Меняйте только если понимаете ByeDPI. Можно сломать YouTube.</string>
</resources>
