<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:tag="main_settings">

    <androidx.preference.PreferenceCategory
        android:title="@string/general_category">

        <DropDownPreference
            android:key="app_theme"
            android:title="@string/theme_settings"
            android:entries="@array/themes"
            android:entryValues="@array/themes_entries"
            android:defaultValue="system"
            app:useSimpleSummaryProvider="true" />

        <com.takisoft.preferencex.EditTextPreference
            android:key="dns_ip"
            android:title="@string/dbs_ip_setting"
            android:summary="@string/dns_summary_hint"
            android:defaultValue="1.1.1.1" />

        <SwitchPreference
            android:key="ipv6_enable"
            android:title="@string/ipv6_setting"
            android:summary="Лучше выкл на мобильной сети в РФ"
            android:defaultValue="false" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/expert_category"
        android:summary="@string/expert_warning">

        <DropDownPreference
            android:key="byedpi_mode"
            android:title="@string/mode_setting"
            android:entries="@array/byedpi_modes"
            android:entryValues="@array/byedpi_modes_entries"
            android:defaultValue="vpn"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            android:key="byedpi_enable_cmd_settings"
            android:title="@string/use_command_line_settings"
            android:defaultValue="true" />

        <Preference
            android:key="byedpi_ui_settings"
            android:title="@string/ui_editor"
            app:fragment="io.github.dovecoteescapee.byedpi.fragments.ByeDpiUISettingsFragment" />

        <Preference
            android:key="byedpi_cmd_settings"
            android:title="@string/command_line_editor"
            app:fragment="io.github.dovecoteescapee.byedpi.fragments.ByeDpiCommandLineSettingsFragment" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/about_category">

        <Preference
            android:key="credits"
            android:title="@string/credits_link"
            android:summary="@string/credits_summary" />

        <Preference
            android:key="version"
            android:title="@string/version"
            app:useSimpleSummaryProvider="true"
            tools:summary="1.0.0" />

        <Preference
            android:key="source_code"
            android:title="@string/source_code_link"
            android:icon="@drawable/ic_github_36"
            android:summary="GPL‑3.0 · открытые компоненты" />

    </androidx.preference.PreferenceCategory>

</PreferenceScreen>
